# qjulia_gpu

./: README.md  Thumbs.db  packages.jl  qjulia.jl  qjulia_kernel.cl  simple.frag  simple.vert
c_test/: CMakeLists.txt  gltest.c
